# CamPix_training

./: .gitignore  README.md
gstreamer_demo/: CMakeLists.txt  record_10s.cpp  toolchain-aarch64.cmake
mediator_excercise/ChatRoom/: CMakeLists.txt  main.cpp
mediator_excercise/ChatRoom/mediator/: ChatRoomMediator.cpp  ChatRoomMediator.hpp  Mediator.hpp
mediator_excercise/ChatRoom/user/: ConcreteUser.cpp  ConcreteUser.hpp  User.hpp
